manifests/deployment-log-output.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  log-output-dep
  namespace: k8s-exercise
  labels:
    app:  log-output
spec:
  selector:
    matchLabels:
      app: log-output
  replicas: 1
  template:
    metadata:
      labels:
        app:  log-output
    spec:
      volumes:
        - name: shared-image
          persistentVolumeClaim:
            claimName: image-claim
      containers:
      - name:  log-output
        image:  kalmis-local-registry:2000/log-output:v1.0
        resources:
          requests:
            cpu: "20m"
            memory: "40Mi"
          limits:
            cpu: "100m"
            memory: "50Mi"
        volumeMounts:
          - name: shared-image
            mountPath: /shared
      - name:  log-output-generator
        image:  kalmis-local-registry:2000/log-output-generator:v1.0
        resources:
          requests:
            cpu: "2m"
            memory: "6Mi"
          limits:
            cpu: "2m"
            memory: "10Mi"
        volumeMounts:
          - name: shared-image
            mountPath: /shared
