manifests/deployment-ping-pong.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  ping-pong-dep
  namespace: k8s-exercise
  labels:
    app:  ping-pong
spec:
  selector:
    matchLabels:
      app: ping-pong
  replicas: 1
  template:
    metadata:
      labels:
        app:  ping-pong
    spec:
      volumes:
        - name: shared-image
          persistentVolumeClaim:
            claimName: image-claim
      containers:
      - name:  ping-pong
        image:  kalmis-local-registry:2000/ping-pong:v1.0
        resources:
          requests:
            cpu: "15m"
            memory: "40Mi"
          limits:
            cpu: "100m"
            memory: "50Mi"
