manifests/service-log-output.yaml
apiVersion: v1
kind: Service
metadata:
  name: log-output-svc
  namespace: k8s-exercise
spec:
  selector:
    app: log-output
  type: ClusterIP
  ports:
  - name: log-output
    protocol: TCP
    port: 80
    targetPort: 8000
