manifests/service-ping-pong.yaml
apiVersion: v1
kind: Service
metadata:
  name: ping-pong-svc
spec:
  selector:
    app: ping-pong
  type: ClusterIP
  ports:
  - name: ping-pong
    protocol: TCP
    port: 80
    targetPort: 8001
