manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: log-output-svc
spec:
  selector:
    app: log-output
  type: ClusterIP
  ports:
  - name: log-output
    protocol: TCP
    port: 2345
    targetPort: 8000
  - name: ping-pong
    protocol: TCP
    port: 2346
    targetPort: 8001
